--- a/ticstyle.css
+++ b/ticstyle.css
@@ -32,7 +32,13 @@ h1 {
     text-align: center;
     font-size: 30px;
 }
-.player1, .player2 {
+.player1 {
+    display: inline-block;
+    padding: 15px;
+    border: 2px solid #B4DFE5;
+    margin: 30px 40px;
+}
+.player2 {
     display: inline-block;
     padding: 15px;
     border: 2px solid #B4DFE5;
@@ -43,6 +49,76 @@ h1 {
 }
 .reset {
     position: fixed;
+    bottom: 60px;
+    left: 5px;
+}
+.restart {
+    position: fixed;
     bottom: 20px;
     left: 5px;
 }
+.rotate-bl {
+	-webkit-animation: rotate-bl 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+	        animation: rotate-bl 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+@-webkit-keyframes rotate-bl {
+    0% {
+      -webkit-transform: rotate(0);
+              transform: rotate(0);
+      -webkit-transform-origin: bottom left;
+              transform-origin: bottom left;
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+              transform: rotate(360deg);
+      -webkit-transform-origin: bottom left;
+              transform-origin: bottom left;
+    }
+  }
+@keyframes rotate-bl {
+    0% {
+      -webkit-transform: rotate(0);
+              transform: rotate(0);
+      -webkit-transform-origin: bottom left;
+              transform-origin: bottom left;
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+              transform: rotate(360deg);
+      -webkit-transform-origin: bottom left;
+              transform-origin: bottom left;
+    }
+  }
+.slide-rotate-hor-b-bck {
+	-webkit-animation: slide-rotate-hor-b-bck 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+	        animation: slide-rotate-hor-b-bck 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+@-webkit-keyframes slide-rotate-hor-b-bck {
+    0% {
+      -webkit-transform: translateY(0) translateZ(0) rotateX(0deg);
+              transform: translateY(0) translateZ(0) rotateX(0deg);
+      -webkit-transform-origin: bottom center;
+              transform-origin: bottom center;
+    }
+    100% {
+      -webkit-transform: translateY(150px) translateZ(-230px) rotateX(90deg);
+              transform: translateY(150px) translateZ(-230px) rotateX(90deg);
+      -webkit-transform-origin: bottom center;
+              transform-origin: bottom center;
+    }
+}
+@keyframes slide-rotate-hor-b-bck {
+    0% {
+      -webkit-transform: translateY(0) translateZ(0) rotateX(0deg);
+              transform: translateY(0) translateZ(0) rotateX(0deg);
+      -webkit-transform-origin: bottom center;
+              transform-origin: bottom center;
+    }
+    100% {
+      -webkit-transform: translateY(150px) translateZ(-230px) rotateX(90deg);
+              transform: translateY(150px) translateZ(-230px) rotateX(90deg);
+      -webkit-transform-origin: bottom center;
+              transform-origin: bottom center;
+    }
+}
+    
